# inventory-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py  schemas.py  utils.py
scripts/: db_setup.sql
