[project]
name = "inventory-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.10",
    "uvicorn[standard]>=0.34.2",
]
